--- a/public/stylesheets/redmine_status.css
+++ b/public/stylesheets/redmine_status.css
@@ -1,2 +1,3 @@
 .status_user { font-weight: bold; }
-.time { font-weight: normal; font-size: 0.9em;}
+.status_message p { display: inline; }
+.time { font-weight: normal; font-size: 0.9em; }
