--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -33,7 +33,7 @@
     %>
     <dd class="status_message">
       <span class="time"><%=format_time(status.created_at, false)%>:</span>
-      <%=textilizable(status.message)%>
+      <%= format_status_message(status)%>
     </dd>
   <% end %>
 <% end %>
