--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -13,31 +13,25 @@
   <% end %>
 </div>
 <h2>Developer Status</h2>
-<% @status_days.each do |day|
-  last_status_user = nil
-  %>
-  <h3><%=format_status_day(day)%></h3>
-  <%
-  first = true
-  last_user = nil
-  
-  @statuses_by_day[day].each do |status|
-    new_user = (last_user != status.user)
-    last_user = status.user
-    if first || new_user then %>
-      <%="</dl>" unless first %>
-      <dl>
-        <dt class="status_user"><%= avatar(status.user) %><%=status.user.name%></dt>
-    <% end
-    first = false
-    %>
+<% last_day = nil %>
+
+<% @statuses.each do |status| %>
+<%= content_tag(:h3, format_status_day(status.created_on)) if status.created_on != last_day %>
+
+<div>
+  <dl>
+    <dt class="status_user"><%= avatar(status.user) %><%=status.user.name%></dt>
     <dd class="status_message">
       <span class="time"><%=format_time(status.created_at, false)%>:</span>
       <%= format_status_message(status)%>
     </dd>
-  <% end %>
-<% end %>
+  </dl>
+</div>
 
+<div style="clear:both;"></div>
+
+<% last_day = status.created_on %>
+<% end %>
 <% content_for :header_tags do %>
     <%= stylesheet_link_tag '/plugin_assets/redmine_status/stylesheets/redmine_status' %>
 <% end %>
