--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -1,37 +1,8 @@
-<div class="contextual">
-<%= link_to_if_authorized("Update your status", {:action => 'new', :id => @project},
-                          :class => "icon icon-add",
-                          :onclick => 'Element.show("add-status"); return false;' )%>
-</div>
-<div id="add-status" style="display:none;">
-  <h2>Update your status</h2>
-  <% labelled_tabular_form_for :status, @status, :url => { :controller => 'statuses', :action => 'create', :id => @project} do |f| %>
-    <div class="box tabular">
-      <p><%=f.text_field :message, :label => "Message", :size => 60%></p>
-    </div>
-    <%= submit_tag l(:button_save) %> <%= link_to l(:button_cancel), "#", :onclick => 'Element.hide("add-news")' %>
-  <% end %>
-</div>
+<%= render :partial => 'add_status' %>
+
 <h2>Developer Status</h2>
-<% last_day = nil %>
+<%= render :partial => 'list', :object => @statuses %>
 
-<% @statuses.each do |status| %>
-<%= content_tag(:h3, format_status_day(status.created_on)) if status.created_on != last_day %>
-
-<div>
-  <dl>
-    <dt class="status_user"><%= avatar(status.user) %><%=status.user.name%></dt>
-    <dd class="status_message">
-      <span class="time"><%=format_time(status.created_at, false)%>:</span>
-      <%= format_status_message(status)%>
-    </dd>
-  </dl>
-</div>
-
-<div style="clear:both;"></div>
-
-<% last_day = status.created_on %>
-<% end %>
 <% content_for :header_tags do %>
     <%= stylesheet_link_tag '/plugin_assets/redmine_status/stylesheets/redmine_status' %>
 <% end %>
