--- a/app/views/statuses/tag_cloud.html.erb
+++ b/app/views/statuses/tag_cloud.html.erb
@@ -1,2 +1,12 @@
 <h2>Tag Cloud</h2>
 
+<div id="tag_cloud">
+  <% tag_cloud @tags, %w(bank1 bank2 bank3 bank4 bank5 bank6 bank7 bank8 bank9 bank10) do |name, css_class| %>
+    <%= link_to h(name), {:action => 'tagged', :id => @project, :tag => name}, :class => css_class %>
+  <% end %>
+</div>
+
+
+<% content_for :header_tags do %>
+    <%= stylesheet_link_tag '/plugin_assets/redmine_status/stylesheets/redmine_status' %>
+<% end %>
