--- a/app/views/statuses/tagged.html.erb
+++ b/app/views/statuses/tagged.html.erb
@@ -1,3 +1,9 @@
+<%= status_menu do
+  link_to_if_authorized("Update your status", {:action => 'new', :id => @project},
+                        :class => "icon icon-add",
+                        :onclick => 'Element.show("add-status"); return false;' )
+end %>
+
 <%= render :partial => 'add_status' %>
 
 <h2>Developer Status tagged with <%= h @tag %></h2>
