--- a/app/views/statuses/tagged.html.erb
+++ b/app/views/statuses/tagged.html.erb
@@ -1,7 +1,7 @@
 <%= status_menu do
-  link_to_if_authorized("Update your status", {:action => 'new', :id => @project},
-                        :class => "icon icon-add",
-                        :onclick => 'Element.show("add-status"); return false;' )
+  link_to("Update your status", {:action => 'new', :id => @project},
+          :class => "icon icon-add",
+          :onclick => 'Element.show("add-status"); return false;' )
 end %>
 
 <%= render :partial => 'add_status' %>
