[#2381] Added a link and the proejct name to each update
Signed-off-by: Brian Terlson <btthalion@gmail.com>

--- a/public/stylesheets/redmine_status.css
+++ b/public/stylesheets/redmine_status.css
@@ -2,6 +2,7 @@
 .status_message p { display: inline; }
 .time { font-weight: normal; font-size: 0.9em; }
 img.gravatar { float:left; margin: 0 10px 0 0;}
+.smaller_project {font-size: 80%;}
 
 
 #tag_cloud {text-align: center; font-size: 200%;}
