--- a/app/views/statuses/_list.html.erb
+++ b/app/views/statuses/_list.html.erb
@@ -5,7 +5,7 @@
 
 <div>
   <dl>
-    <dt class="status_user"><%= avatar(status.user) %><%=status.user.name %></dt>
+    <dt class="status_user"><%= avatar(status.user) %><%=status.user.name %> <%= format_project(status) %></dt>
     <dd class="status_message">
       <span class="time"><%=format_time(status.created_at, false)%>:</span>
       <%= format_status_message(status)%>
