--- a/app/views/statuses/_add_status.html.erb
+++ b/app/views/statuses/_add_status.html.erb
@@ -1,8 +1,11 @@
 <div id="add-status" style="display:none;">
   <h2>Update your status</h2>
-  <% labelled_tabular_form_for :status, @status, :url => { :controller => 'statuses', :action => 'create', :id => @project} do |f| %>
+  <% labelled_tabular_form_for :status, @status, :url => { :controller => 'statuses', :action => 'create', :id => @project}, :html => {:id => 'status'} do |f| %>
     <div class="box tabular">
-      <p><%=f.text_field :message, :label => "Message", :size => 60%></p>
+      <p><%=f.text_field :message, :label => "Message", :size => 60, :required => true %></p>
+      <% unless @project %>
+      <p><%=f.select :project_id, User.current.projects.collect{|p| [p.name, p.id]}, :label => "Project", :required => true %></p>
+      <% end %>
     </div>
     <%= submit_tag l(:button_save) %> <%= link_to l(:button_cancel), "#", :onclick => 'Element.hide("add-news")' %>
   <% end %>
