[#2381] Added the ability of a user to create a new Status cross project
* Removed the hardcoded project_id in StatusesController#create
* Added a helper method to check that the user has permission to create_statuses
  for their project
* Marked Status.project_id as protected
* Added cucumber features and specs

Signed-off-by: Brian Terlson <btthalion@gmail.com>

--- a/app/views/statuses/_add_status.html.erb
+++ b/app/views/statuses/_add_status.html.erb
@@ -4,7 +4,7 @@
     <div class="box tabular">
       <p><%=f.text_field :message, :label => "Message", :size => 60, :required => true %></p>
       <% unless @project %>
-      <p><%=f.select :project_id, User.current.projects.collect{|p| [p.name, p.id]}, :label => "Project", :required => true %></p>
+      <p><%=f.select :project_id, projects_with_create_status_permission.collect{|p| [p.name, p.id]}, :label => "Project", :required => true %></p>
       <% end %>
     </div>
     <%= submit_tag l(:button_save) %> <%= link_to l(:button_cancel), "#", :onclick => 'Element.hide("add-news")' %>
