--- a/public/stylesheets/redmine_status.css
+++ b/public/stylesheets/redmine_status.css
@@ -3,6 +3,7 @@
 .time { font-weight: normal; font-size: 0.9em; }
 img.gravatar { float:left; margin: 0 10px 0 0;}
 .smaller_project {font-size: 80%;}
+.icon-news { background-image: url(../../../images/news.png); }
 
 
 #tag_cloud {text-align: center; font-size: 200%;}
