[#2364] Added some CSS classes to the email for cucumber to check.
Signed-off-by: Brian Terlson <btthalion@gmail.com>

--- a/app/views/status_mailer/delayed_notification.text.html.rhtml
+++ b/app/views/status_mailer/delayed_notification.text.html.rhtml
@@ -2,9 +2,9 @@
 
 <% @statuses.each do |status| %>
 <hr />
-<%= h status.user.name if status.user %>:
+<p class="status_name"><%= h status.user.name if status.user %>:</p>
 
-<%= h status.message %>
+<p class="status_message"><%= h status.message %></p>
 
 <% end %>
 
