--- a/app/views/status_mailer/delayed_notification.text.html.rhtml
+++ b/app/views/status_mailer/delayed_notification.text.html.rhtml
@@ -1,4 +1,4 @@
-<p>Here are the recent status updates for you since <%= format_time(h(@last_updated_at)) %>:</p>
+<p>Here are the recent status updates for you since <%= format_time(h(@last_updated_at)) if @last_updated_at %>:</p>
 
 <% @statuses.each do |status| %>
 <hr />
