--- a/app/views/status_mailer/delayed_notification.text.plain.rhtml
+++ b/app/views/status_mailer/delayed_notification.text.plain.rhtml
@@ -1,4 +1,4 @@
-Here are the recent status updates for you since <%= format_time(h(@last_updated_at)) %>:
+Here are the recent status updates for you since <%= format_time(h(@last_updated_at)) if @last_updated_at %>:
 
 <% @statuses.each do |status| %>
 ----------
