--- a/app/views/statuses/_list.html.erb
+++ b/app/views/statuses/_list.html.erb
@@ -8,7 +8,7 @@
     <dt class="status_user"><%= avatar(status.user) %><%=status.user.name %> <%= format_project(status) %></dt>
     <dd class="status_message">
       <span class="time"><%=format_time(status.created_at, false)%>:</span>
-      <%= format_status_message(status)%>
+      <%= format_status_message(status, {:highlight => @term}) %>
     </dd>
   </dl>
 </div>
