--- a/assets/stylesheets/redmine_status.css
+++ b/assets/stylesheets/redmine_status.css
@@ -1,7 +1,7 @@
 .status_user { font-weight: bold; }
 .status_message p { display: inline; }
 .time { font-weight: normal; font-size: 0.9em; }
-img.gravatar { float:left; margin: 0 10px 0 0;}
+.status_user img.gravatar { float:left; margin: 0 10px 0 0;}
 .smaller_project {font-size: 80%;}
 .icon-news { background-image: url(../../../images/news.png); }
 .icon-search { background-image: url(../images/magnifier.png); }
