--- a/app/views/status_mailer/realtime_notification.text.html.rhtml
+++ b/app/views/status_mailer/realtime_notification.text.html.rhtml
@@ -1,4 +1,4 @@
-<%= h @author.name if @author.respond_to? :name %> posted a new status update:
+<%= h @author.name if @author.respond_to? :name %> <%= l(:redmine_status_new_update) %>:
 
 <hr />
 
