--- a/app/views/statuses/search.html.erb
+++ b/app/views/statuses/search.html.erb
@@ -1,6 +1,6 @@
 <%= status_menu %>
 
-<h2>Search</h2>
+<h2><%= l(:label_search) %></h2>
 
 <div class="box">
   <% form_tag({}, :method => :get) do %>
