--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -1,12 +1,12 @@
 <%= status_menu do
-  link_to("Update your status", {:action => 'new', :id => @project},
+  link_to(l(:redmine_status_update_your_status), {:action => 'new', :id => @project},
           :class => "icon icon-add",
           :onclick => 'Element.show("add-status"); return false;' )
 end %>
 
 <%= render :partial => 'add_status' %>
 
-<h2>Developer Status</h2>
+<h2><%= l(:redmine_status_developer_status) %></h2>
 <%= render :partial => 'list', :object => @statuses %>
 
 <% content_for :header_tags do %>
