--- a/app/views/statuses/tag_cloud.html.erb
+++ b/app/views/statuses/tag_cloud.html.erb
@@ -1,6 +1,6 @@
 <%= status_menu %>
 
-<h2>Tag Cloud</h2>
+<h2><%= l(:redmine_status_tag_cloud) %></h2>
 
 <div id="tag_cloud">
   <% tag_cloud @tags, %w(bank1 bank2 bank3 bank4 bank5 bank6 bank7 bank8 bank9 bank10) do |name, css_class| %>
